--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "moment": "^2.30.1",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-date-picker": "^5.0.13",
     "react-native-gesture-handler": "^2.30.0",
     "react-native-keyboard-controller": "^1.20.2",
     "react-native-reanimated": "^4.2.1",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.19.0",
+    "react-native-snackbar": "^2.9.0",
     "react-native-svg": "^15.15.1",
     "react-native-worklets": "^0.7.1",
     "react-redux": "^9.2.0",
